# aiaccel2_design

./: Dockerfile  LICENSE  README.md  docker-compose.yaml  optimization_settings.yaml  pyproject.toml
aiaccel2/: main.py
aiaccel2/user/domain/: command_handler.py  user.py  user_repository.py
aiaccel2/user/infrastructure/: in_memory_user_repository.py  pymongo_user_repository.py
aiaccel2/user/use_cases/: create_one_user_command.py  delete_one_user_command.py  find_all_users_command.py  find_one_user_command.py  update_one_user_command.py
app/: main.py
app/core/entities/: hyperparameter.py  hyperparameter_definition.py  hyperparameter_definition_set.py  hyperparameter_set.py  optimization_job.py  optimization_settings.py  trial_job.py
app/core/factories/: hyperparameter_definition_factory.py  hyperparameter_factory.py  optimization_job_factory.py  optimization_settings_factory.py  trial_job_factory.py
app/core/repositories/: hyperparameter_definition_repository.py  hyperparameter_set_repository.py  optimization_job_repository.py  optimization_settings_repository.py  trial_job_repository.py
app/core/services/: optimization_job_service.py  trial_job_service.py
app/core/value_objects/: choices.py  data_type.py  execution_command.py  execution_infrastructure_type.py  hyperparameter_values.py  id.py  initial.py  name.py  numeric_range.py  optimization_algorithm.py  trial_job_result.py  (+1 more)
app/infrastructure/: models.py
mongo-seed/: Dockerfile  users.json
tests/unit/: test_hyperparameter.py  test_hyperparameter_definition.py  test_optimization_job.py
(+19 files in other folders)
